fix: donar-details more donar slider btn align

--- a/css/style.css
+++ b/css/style.css
@@ -15554,7 +15554,7 @@ ul.children {
 .Donors_slider_wrapper button.slick-arrow {
   position: absolute;
   top: 50%;
-  display: flex;
+  display: flex !important;
   width: 64px;
   height: 64px;
   padding: 16px 24px;
